# tonsuu-checker

./: .gitignore  Cargo.toml  README.md  prompt-spec.json
.github/workflows/: gemini-review.yml
config/: materials.toml  trucks.toml  vehicles.toml
crates/tonsuu-app/: Cargo.toml
crates/tonsuu-app/src/: config.rs  lib.rs  repository.rs
crates/tonsuu-app/src/app/: analysis_service.rs  mod.rs  query_service.rs
crates/tonsuu-app/src/constants/: materials.rs  mod.rs  truck_specs.rs  weight_calculator.rs
crates/tonsuu-app/src/export/: excel.rs  mod.rs
crates/tonsuu-app/src/scanner/: mod.rs  vehicles.rs
crates/tonsuu-cli/: Cargo.toml
crates/tonsuu-cli/src/: cli.rs  commands.rs  main.rs  output.rs
crates/tonsuu-cli/tests/: ground_truth_test.rs
crates/tonsuu-domain/: Cargo.toml
crates/tonsuu-domain/src/: lib.rs
crates/tonsuu-domain/src/model/: material.rs  truck.rs  weighing_slip.rs
crates/tonsuu-domain/src/repository/: mod.rs
crates/tonsuu-domain/src/service/: mod.rs  overload_checker.rs  weight_calculator.rs
crates/tonsuu-gui/: Cargo.toml
crates/tonsuu-gui/src/: accuracy_panel.rs  analyze_panel.rs  app.rs  history_panel.rs  main.rs  settings_panel.rs  vehicle_panel.rs
crates/tonsuu-infra/: Cargo.toml
crates/tonsuu-infra/src/: csv_loader.rs  legacy_importer.rs  lib.rs  overload_csv.rs  vehicle_master_loader.rs
crates/tonsuu-infra/src/persistence/: file_analysis_history_repo.rs  file_vehicle_master_repo.rs  file_vehicle_repo.rs  file_weighing_slip_repo.rs  mod.rs
crates/tonsuu-store/: Cargo.toml
crates/tonsuu-store/src/: lib.rs  vehicles.rs
crates/tonsuu-types/: Cargo.toml
crates/tonsuu-types/src/: error.rs  lib.rs  types.rs
crates/tonsuu-vision/: Cargo.toml
crates/tonsuu-vision/src/: cache.rs  lib.rs  plate_recognizer.rs  volume_estimator.rs
crates/tonsuu-vision/src/ai/: backend_impl.rs  mod.rs  prompts.rs
docs/plans/: 2026-02-08-tonsuu-checker-design.md
docs/qa/: 2026-02-08-gui-manual-test-result.md  2026-02-08-gui-manual-test-result.xlsx  2026-02-08-gui-manual-test.md
scripts/: compat_check.ps1  plate_detect.py  plate_local.py  requirements-plate.txt
src/: cli.rs  commands.rs  config.rs  error.rs  lib.rs  main.rs  output.rs  plate_local.rs  types.rs
src/analyzer/: mod.rs  shaken.rs
src/app/: analysis_service.rs  mod.rs  query_service.rs
src/constants/: materials.rs  mod.rs  prompts.rs  truck_specs.rs  weight_calculator.rs
src/domain/model/: material.rs  mod.rs  vehicle_master.rs  weighing_slip.rs
src/domain/repository/: mod.rs
src/domain/service/: mod.rs  overload_checker.rs  weight_calculator.rs
src/export/: excel.rs  mod.rs
src/gui/: accuracy_panel.rs  analyze_panel.rs  app.rs  history_panel.rs  main.rs  settings_panel.rs  vehicle_panel.rs
src/infrastructure/: csv_loader.rs  exif_reader.rs  legacy_importer.rs  mod.rs  vehicle_master_loader.rs
src/infrastructure/persistence/: file_analysis_history_repo.rs  file_vehicle_master_repo.rs  file_vehicle_repo.rs  file_weighing_slip_repo.rs
src/scanner/: mod.rs  vehicles.rs
src/store/: mod.rs  vehicles.rs
src/vision/: cache.rs  mod.rs  plate_recognizer.rs  volume_estimator.rs
src/vision/ai/: prompts.rs
tests/: ground_truth_test.rs  integration_test.rs
