[workspace]
members = [
    "crates/tonsuu-types",
    "crates/tonsuu-store",
    "crates/tonsuu-domain",
    "crates/tonsuu-vision",
    "crates/tonsuu-infra",
    "crates/tonsuu-app",
    "crates/tonsuu-cli",
    "crates/tonsuu-gui",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["yuuji"]

[workspace.dependencies]
# Internal crates
tonsuu-types = { path = "crates/tonsuu-types" }
tonsuu-store = { path = "crates/tonsuu-store" }
tonsuu-domain = { path = "crates/tonsuu-domain" }
tonsuu-vision = { path = "crates/tonsuu-vision" }
tonsuu-infra = { path = "crates/tonsuu-infra" }
tonsuu-app = { path = "crates/tonsuu-app" }

# External crates (sibling dirs)
cli-ai-analyzer = { path = "../cli-ai-analyzer" }
tonsuu-core = { path = "../tonsuu-core" }

# Third-party
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rust_xlsxwriter = "0.79"
thiserror = "2"
indicatif = "0.17"
walkdir = "2"
dirs = "5"
sha2 = "0.10"
image = "0.25"
chrono = { version = "0.4", features = ["serde"] }
num_cpus = "1.16"
eframe = "0.31"
egui_extras = { version = "0.31", features = ["image"] }
rfd = "0.15"
uuid = { version = "1.20.0", features = ["v4"] }
base64 = "0.22.1"
shell-words = "1.1.0"
toml = "0.8"
csv = "1.3"
encoding_rs = "0.8"
kamadak-exif = "0.6.1"
tempfile = "3.24.0"
