[package]
name = "tonsuu-app"
description = "Application service layer - use cases, config, scanning, export"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
tonsuu-types.workspace = true
tonsuu-store.workspace = true
tonsuu-domain.workspace = true
tonsuu-vision.workspace = true
tonsuu-infra.workspace = true
cli-ai-analyzer.workspace = true
serde.workspace = true
serde_json.workspace = true
image.workspace = true
walkdir.workspace = true
dirs.workspace = true
toml.workspace = true
thiserror.workspace = true
rust_xlsxwriter.workspace = true
clap.workspace = true
chrono.workspace = true
