[package]
name = "tonsuu-cli"
description = "CLI binary for tonsuu-checker"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "tonsuu-checker"
path = "src/main.rs"

[dependencies]
tonsuu-types.workspace = true
tonsuu-store.workspace = true
tonsuu-domain.workspace = true
tonsuu-vision.workspace = true
tonsuu-app.workspace = true
tonsuu-infra.workspace = true
cli-ai-analyzer.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
indicatif.workspace = true
chrono.workspace = true
base64.workspace = true
num_cpus.workspace = true
tokio.workspace = true
rust_xlsxwriter.workspace = true
