[package]
name = "tonsuu-domain"
description = "Domain models, services, and repository traits"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
tonsuu-types.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
toml.workspace = true
