[package]
name = "tonsuu-gui"
description = "GUI application using egui/eframe"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "tonsuu-gui"
path = "src/main.rs"

[dependencies]
tonsuu-types.workspace = true
tonsuu-store.workspace = true
tonsuu-domain.workspace = true
tonsuu-vision.workspace = true
tonsuu-app.workspace = true
tonsuu-infra.workspace = true
cli-ai-analyzer.workspace = true
eframe.workspace = true
egui_extras.workspace = true
rfd.workspace = true
serde.workspace = true
serde_json.workspace = true
image.workspace = true
base64.workspace = true
tonsuu-core.workspace = true
