[package]
name = "tonsuu-store"
description = "Persistent store for analysis history and vehicles"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
tonsuu-types.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
chrono.workspace = true
