[package]
name = "tonsuu-types"
description = "Core types and error definitions for tonsuu-checker"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
cli-ai-analyzer.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
image.workspace = true
clap.workspace = true
